--- a/CinemaBook/Scence/StoreShoppingCart/view/StoreViewController.xib
+++ b/CinemaBook/Scence/StoreShoppingCart/view/StoreViewController.xib
@@ -44,7 +44,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UuK-C8-0wB">
                                     <rect key="frame" x="333" y="5" width="40" height="40"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopping-cart" translatesAutoresizingMaskIntoConstraints="NO" id="uSU-cR-fjd">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bag" translatesAutoresizingMaskIntoConstraints="NO" id="uSU-cR-fjd">
                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sZ1-BW-hLs">
@@ -218,10 +218,10 @@
         </view>
     </objects>
     <resources>
+        <image name="bag" width="512" height="512"/>
         <image name="icon-back-blue" width="8.6666669845581055" height="17.333333969116211"/>
         <image name="mappin.and.ellipse" catalog="system" width="117" height="128"/>
         <image name="see_more" width="18" height="18"/>
-        <image name="shopping-cart" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
