--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -21,6 +21,7 @@
                 <outlet property="lbl_price_point" destination="u4b-MK-RxH" id="nnS-aD-06T"/>
                 <outlet property="tableView" destination="vVx-X6-bnx" id="iUk-Fg-iLI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_detail" destination="620-D7-xZg" id="VRS-xL-cNs"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -32,7 +33,7 @@
                     <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="620-D7-xZg">
-                            <rect key="frame" x="0.0" y="5" width="414" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-admin" translatesAutoresizingMaskIntoConstraints="NO" id="hcb-62-GwD">
                                     <rect key="frame" x="20" y="5" width="50" height="50"/>
@@ -83,7 +84,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="hcb-62-GwD" firstAttribute="leading" secondItem="620-D7-xZg" secondAttribute="leading" constant="20" id="141-e6-Guv"/>
                                 <constraint firstItem="Jp9-qH-MqZ" firstAttribute="top" secondItem="6ly-WZ-Dbr" secondAttribute="bottom" id="3BH-cO-KAx"/>
@@ -115,13 +116,13 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVx-X6-bnx">
-                            <rect key="frame" x="0.0" y="70" width="414" height="744"/>
+                            <rect key="frame" x="0.0" y="65" width="414" height="749"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
-                        <constraint firstItem="620-D7-xZg" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" constant="5" id="2Ju-VW-Uht"/>
+                        <constraint firstItem="620-D7-xZg" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" id="2Ju-VW-Uht"/>
                         <constraint firstItem="vVx-X6-bnx" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="bottom" constant="5" id="AHO-Ip-zEY"/>
                         <constraint firstAttribute="bottom" secondItem="vVx-X6-bnx" secondAttribute="bottom" id="Cue-g8-RHp"/>
                         <constraint firstItem="620-D7-xZg" firstAttribute="leading" secondItem="vec-iT-mKk" secondAttribute="leading" id="LJj-eD-frE"/>
@@ -132,7 +133,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemGray6Color"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="vec-iT-mKk" secondAttribute="bottom" id="Bbk-T2-Ax9"/>
                 <constraint firstItem="vec-iT-mKk" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="MR7-9C-tEG"/>
